--- a/web/resources/index.html
+++ b/web/resources/index.html
@@ -2,51 +2,43 @@
 
 <html ng-app="Fox">
 
-	<head>
+<head>
 
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-		<meta name="fragment" content="!">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="fragment" content="!">
 
-		<title ng-bind="$root.title">Fox</title>
+	<title ng-bind="$root.title">Fox Mulder</title>
 
-		<link rel="icon" type="image/png" href="./images/favicon.png?v1"/>
-		<link href="./images/touch-icon.png?v1" rel="apple-touch-icon" sizes="180x180"/>
+	<link rel="icon" type="image/png" href="./images/favicon.png?v1" />
+	<link href="./images/touch-icon.png?v1" rel="apple-touch-icon" sizes="180x180" />
 
-		<link href="//fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
-		<link href="./styles/main.css" media="all" rel="stylesheet"/>
+	<link href="//fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
 
-		<script>
-			window.APP_NAME = 'Fox';
-		</script>
+</head>
 
-		<script src="./scripts/app.js"></script>
+<body>
 
-	</head>
+	<header></header>
 
-	<body>
+	<div class="viewport" ui-view></div>
 
-		<header></header>
+</body>
 
-		<div class="viewport" ui-view></div>
+<script>
+	(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r;
+		i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)
+		}, i[r].l = 1 * new Date();
+		a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0];
+		a.async = 1;
+		a.src = g;
+		m.parentNode.insertBefore(a, m)
+	})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-	</body>
-
-	<script>
-
-		(function (i, s, o, g, r, a, m) {
-			i['GoogleAnalyticsObject'] = r;
-			i[r] = i[r] || function () {
-				(i[r].q = i[r].q || []).push(arguments)
-			}, i[r].l = 1 * new Date();
-			a = s.createElement(o),
-				m = s.getElementsByTagName(o)[0];
-			a.async = 1;
-			a.src = g;
-			m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-	</script>
+</script>
 
 </html>
